--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -2,3 +2,6 @@
 %p= @note.content
 
 = link_to "All Notes", notes_path
+
+= link_to "Edit", edit_note_path(@note)
+= link_to "Delete", note_path(@note), method: :delete, data: { confirm: "Are You Sure?" }
