Add styling for Welcome Index

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,32 @@
-%h1 my Everevernote Placeholder
+#banner
+	.banner_content
+		%h1 EverEverNote
+		%p Your life's Work!
+		%button= link_to "Sign Up", new_user_registration_path
+#testimonial
+	.wrapper
+		%p.quote "I keep all our important documents with EverEverNote."
+		%p.name - President Obama
+#callouts
+	.callout_inner
+		.wrapper
+			.callout
+				%h2 Journal
+				Viral Echo Park Intelligentsia tattooed, craft beer organic authentic polaroid tousled mlkshk church-key. Fanny pack Banksy vegan  authentic Helvetica.
+
+			.callout
+				%h2 Notes
+				Viral Echo Park Intelligentsia tattooed, craft beer organic authentic polaroid tousled mlkshk church-key. Fanny pack Banksy vegan  authentic Helvetica.
+
+			.callout
+				%h2 Epic
+				Viral Echo Park Intelligentsia tattooed, craft beer organic authentic polaroid tousled mlkshk church-key. Fanny pack Banksy vegan  authentic Helvetica.
+
+#bottom_cta
+	.wrapper
+		%h2 Store All Your Notes!
+		%p Be Different, Join the Elite!
+		%button= link_to "Start Here!!!", new_user_registration_path
+
+%footer
+	%p &copy; CrashLearner
